--- a/Friends/src/main/resources/application.yml
+++ b/Friends/src/main/resources/application.yml
@@ -8,27 +8,15 @@ spring:
     password: MY_SUPER_NEW_PASSWORD
     driver-class-name: org.postgresql.Driver
 
-  jpa:
-    hibernate:
-      ddl-auto: none
-    show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-
   liquibase:
+
     change-log: classpath:/db/changelog/db.changelog-master.xml
-    enabled: true
 
   kafka:
     bootstrap-servers: localhost:9092
     producer:
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-    consumer:
-      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
-      group-id: friends-group
 
 eureka:
   client:
@@ -44,3 +32,15 @@ server:
 
 springdoc:
   packagesToScan: com.example.mcfriends.controller
+
+management:
+  endpoints:
+    web:
+      exposure:
+
+        include: "*"
+  metrics:
+    export:
+      prometheus:
+
+        enabled: true # <-- Исправлено. Только этот параметр нужен Spring Boot.
