Add account service URL configuration to application.yml

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,6 +20,9 @@ spring:
 
 client:
   auth: "http://mc-auth:8081"
+services:
+  account:
+    url: ${ACCOUNT_SERVICE_URL:http://localhost:8080/internal/account}
 
 eureka:
   client:
